<resources>
    <string name="app_name">Student2Student</string>
    <string name="action_settings">Settings</string>
    <string name="new_user_button">משתמש חדש</string>
    <string name="exist_user_button">משתמש קיים</string>
    <string name="title_activity_new_user">new_user</string>
    <string name="title_activity_exist_user">exist_user</string>
    <string name="headlineText"> מלא את הפרטים שלך </string>
    <string name="first_name"> שם פרטי </string>
    <string name="last_name"> שם משפחה </string>
    <string name="id"> ת.ז </string>
    <string name="e_mail">e_mail</string>
    <string name="phone">טלפון</string>
    <string name="teach_checkBox">האם ברצונך ללמד</string>
    <string name="regulationsCheckBox">האם קראת את</string>
    <string name="regulationsText">התקנון</string>
    <string name="ok_button">ok</string>
    <string name="cancel_button">cancel</string>
    <string name="user_name"> שם משתמש </string>
    <string name="exist_user_headLine"> משתמש קיים </string>
    <string name="update_details"> עדכן פרטים </string>

    <string-array name="line_of_business_list">
        <item> הנדסת תוכנה </item>
        <item> הנדסה פרמצבטית </item>
        <item> הנדסת חומרים מתקדמים </item>
        <item> הנדסת טכנולוגיות סביבתיות </item>
        <item> הנדסת מכונות </item>
        <item> הנדסת תעשייה וניהול </item>
        <item> הנדסת חשמל ואלקטרוניקה </item>
        <item> הנדסה אזרחית וסביבתית </item>
        <item> מכינות קדם אקדמיות </item>
        <item> אחר </item>
    </string-array>
    <string name="title_activity_which_to_teach">which_to_teach</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_which_to_learn">which_to_learn</string>
    <string name="title_activity_result">result</string>

</resources>
